chart/templates/djane-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: djane
  name: djane
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: djane
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/iotcrawler: "true"
        io.kompose.service: djane
    spec:
      containers:
      - image: gitlab.iotcrawler.net:4567/core/djane:1.0.1
        imagePullPolicy: ""
        name: djane
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
