chart/templates/ingress-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"

spec:
  type: LoadBalancer
  ports:
    - name: proxied-tcp-5672
      port: 5672
      targetPort: 5672
      protocol: TCP
  selector:
    io.kompose.service: rabbit
