chart/templates/ranking-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ranking
  name: ranking
spec:
  ports:
  - name: "3003"
    port: 3003
    targetPort: 3003
  selector:
    io.kompose.service: ranking
status:
  loadBalancer: {}
