chart/templates/iotcrawler-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: iotcrawler
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/iotcrawler: "true"
  podSelector:
    matchLabels:
      io.kompose.network/iotcrawler: "true"
